test-components/src/snapshots/snapshot_component_value@aabb.snap
---
source: src/lib.rs
expression: serializer
snapshot_kind: text
---
{
  "bevy_camera::primitives::Aabb": {
    "center": [
      0.0,
      0.0,
      0.0
    ],
    "half_extents": [
      0.0,
      0.0,
      0.0
    ]
  }
}
