test-components/src/snapshots/snapshot_component_value@anchor.snap
---
source: src/lib.rs
expression: serializer
snapshot_kind: text
---
{
  "bevy_sprite::sprite::Anchor": [
    0.0,
    0.0
  ]
}
