test-components/src/snapshots/snapshot_component_value@animation_graph_handle.snap
---
source: src/lib.rs
expression: serializer
snapshot_kind: text
---
{
  "bevy_animation::graph::AnimationGraphHandle": {
    "Uuid": "97128bb1-2588-480b-bdc6-87b4adbec477"
  }
}
