test-components/src/snapshots/snapshot_component_value@animation_target.snap
---
source: src/lib.rs
expression: serializer
snapshot_kind: text
---
{
  "bevy_animation::AnimationTarget": {
    "id": "16c27292-862e-4555-af16-d3d8e624c6de",
    "player": 1
  }
}
