test-components/src/snapshots/snapshot_component_value@bloom-2.snap
---
source: src/lib.rs
expression: serializer
snapshot_kind: text
---
{
  "bevy_post_process::bloom::settings::Bloom": {
    "intensity": 0.15,
    "low_frequency_boost": 0.7,
    "low_frequency_boost_curvature": 0.95,
    "high_pass_frequency": 1.0,
    "prefilter": {
      "threshold": 0.0,
      "threshold_softness": 0.0
    },
    "composite_mode": "EnergyConserving",
    "max_mip_dimension": 512,
    "scale": [
      1.0,
      1.0
    ]
  }
}
