test-components/src/snapshots/snapshot_component_value@bloom-3.snap
---
source: src/lib.rs
expression: serializer
snapshot_kind: text
---
{
  "bevy_anti_alias::fxaa::Fxaa": {
    "enabled": true,
    "edge_threshold": "High",
    "edge_threshold_min": "High"
  }
}
