test-components/src/snapshots/snapshot_component_value@bloom.snap
---
source: src/lib.rs
expression: serializer
snapshot_kind: text
---
{
  "bevy_animation::AnimationPlayer": {
    "active_animations": {}
  }
}
