test-components/src/snapshots/snapshot_component_value@border_color.snap
---
source: src/lib.rs
expression: serializer
snapshot_kind: text
---
{
  "bevy_ui::ui_node::BorderColor": {
    "LinearRgba": {
      "red": 0.0,
      "green": 0.0,
      "blue": 0.0,
      "alpha": 0.0
    }
  }
}
