test-components/src/snapshots/snapshot_component_value@box_shadow_samples.snap
---
source: src/lib.rs
expression: serializer
snapshot_kind: text
---
{
  "bevy_ui_render::BoxShadowSamples": 4
}
